--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -51,6 +51,7 @@
             <li>E-post: post@nettup.no</li>
             <li>Telefon: +47 473 31 298</li>
             <li>Adresse: Trollåsveien 4, 1414 Trollåsen</li>
+            <li>Org.nr: 934 059 304</li>
           </ul>
         </div>
       </div>
