--- a/src/styles/text-animation-v2.css
+++ b/src/styles/text-animation-v2.css
@@ -35,17 +35,25 @@
 }
 
 /* Forsinkelse basert på posisjon */
-.text-rotate > .word:nth-child(1) { animation-delay: 0s; }
-.text-rotate > .word:nth-child(2) { animation-delay: var(--animation-duration); }
-.text-rotate > .word:nth-child(3) { animation-delay: calc(var(--animation-duration) * 2); }
+.text-rotate > .word:nth-child(1) {
+  animation-delay: 0s;
+}
+.text-rotate > .word:nth-child(2) {
+  animation-delay: var(--animation-duration);
+}
+.text-rotate > .word:nth-child(3) {
+  animation-delay: calc(var(--animation-duration) * 2);
+}
 
 /* Enkel, clean animasjon - inn ovenfra, ut nedover */
 @keyframes rotateWord {
-  0%, 100% { 
+  0%,
+  100% {
     opacity: 0;
     transform: translateY(-100%);
   }
-  5%, 25% {
+  5%,
+  25% {
     opacity: 1;
     transform: translateY(0);
   }
@@ -60,12 +68,12 @@
   .text-rotate > .word {
     animation: none;
   }
-  
+
   .text-rotate > .word:first-child {
     opacity: 1;
     transform: none;
   }
-  
+
   .text-rotate > .word:not(:first-child) {
     display: none;
   }
@@ -77,7 +85,7 @@
     display: block;
     text-align: center;
   }
-  
+
   .text-rotate-static {
     display: block;
     margin-bottom: 0.25rem;
@@ -89,10 +97,9 @@
   .text-rotate > .word {
     animation-play-state: paused;
   }
-  
+
   .text-rotate > .word:first-child {
     animation-play-state: running;
     opacity: 1;
   }
 }
-
