--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,6 +5,7 @@ import GoogleAnalytics from '../components/GoogleAnalytics.astro';
 import CookieBanner from '../components/CookieBanner.astro';
 import SchemaOrg from '../components/SchemaOrg.astro';
 import '../styles/global.css';
+import '../styles/animations.css';
 import '../styles/simple-text-animation.css';
 
 import {
