--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,9 @@
+/* Tailwind CSS Directives */
+/* stylelint-disable at-rule-no-unknown */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* stylelint-enable at-rule-no-unknown */
 
 /* Base styles */
 html {
